# openazure

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: help.txt
openazure/: __init__.py  appconfig.py  blob.py  cli.py  connect.py  cosmos.py  errors.py  eventgrid.py  eventhubs.py  fileshare.py  functions.py  keyvault.py  managedidentity.py  monitor.py  notificationhubs.py  queue.py  server.py  servicebus.py  store.py  table.py
tests/: conftest.py  test_appconfig.py  test_blob.py  test_blob_extended.py  test_connect.py  test_cosmos.py  test_eventgrid.py  test_eventhubs.py  test_fileshare.py  test_functions.py  test_functions_extended.py  test_identity_security_server.py  test_keyvault.py  test_managedidentity.py  test_messaging_server.py  test_monitor.py  test_notificationhubs.py  test_queue.py  test_queue_extended.py  test_server.py  test_server_extended.py  test_servicebus.py  test_table.py  test_table_extended.py
