[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openazure"
version = "0.1.1"
description = "Local, open-source reimplementation of core Azure primitives (Blob, Table, Queue, Functions) for local development and testing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "COCL-1.0" }
authors = [{ name = "Cognis Digital", email = "engineering@cognisdigital.com" }]
keywords = ["azure", "emulator", "local-development", "blob", "table", "queue", "functions", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
# Core is pure standard library: no runtime dependencies.
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/cognis-digital/openazure"
Repository = "https://github.com/cognis-digital/openazure"

[project.scripts]
"openazure-emit" = "openazure.connect:emit_main"
openazure = "openazure.cli:main"

[tool.setuptools]
packages = ["openazure"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
